Created index web page. Structure folders included and bullshit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title></title>
+    <title>Hello and welcome khsjdkfjsdjfbskdj</title>
 </head>
 <body>
 
